 * Various other fixes

Highlander:
 + Show collected weapons after kill and play sound
 + Mission panel now shows all game modifiers (e.g. mines time, vampirism, etc.)

Construction Mode:
 + Added script parameter support:
  + initialenergy: Amount of energy at start
  + energyperround: New energy per round
  + maxenergy: Maximum allowed
 + Completely reworked all in-game texts and descriptions
 * Special tools like structure placer now have their own proper descriptions (instead of Air Attack description, etc.)
 * Costs for weapon and utility crates were all equal
 * Many other fixes and tweaks

Racer and TechRacer:
 + Allow to only place 2 waypoints in Racer
 + Allow to remove Racer waypoints with precise key
 + New script parameters for Racer:
  + rounds: Number of rounds to play
  + waypointradius: Size of waypoints
  + maxwaypoints: Maximum allowed number of waypoints
 + Show correct ranking and times in stats screen of Racer and TechRacer
 * Fixed waypoint message in TechRacer and Racer overwriting current weapon selection message
 * Fixed TechRacer not recording finish if time was >= 100s

WxW:
 + Support for multiple sets of walls per map
 + Add optional “Crate Before Attack” rule
 + Add optional “All But Last” rule
 + Add optional “Kill The Leader” rule
 + Script parameter support (see Lua file comment for documentation)
 + Possible to set max. number of weapons in game (script parameter only)
 + Menu can be disabled (with script parameter “menu=false”) for insant game start
 + Possible to set number of crates per turn
 + Ropes, ShoppaKing, ShoppaHell and ShoppaNeon can now be played with the classic left and right walls
 + Allows almost all game modifiers to be changed, the only exception is crate probabilities
 + New wall sets for Ropes, ShoppaNeon, ShoppaDesert, ShoppaWild, ShoppaKing and ShoppaHell.
 + Basic support for a bunch of Shoppa maps
 + Fully functional even without a map border
 + More sound effects